--- a/pathology_search/templates/pathology_search/validate.html
+++ b/pathology_search/templates/pathology_search/validate.html
@@ -1,9 +1,10 @@
 {% extends 'pathology_search/base.html' %}
+{% load i18n %}
 
 {% block content %}
 <div class="mb-6">
     <a href="{% url 'pathology_search:index' %}" class="text-purple-600 hover:text-purple-800 font-medium">
-        <i class="fas fa-arrow-left mr-2"></i>Nouvelle recherche
+        <i class="fas fa-arrow-left mr-2"></i>{% trans "Nouvelle recherche" %}
     </a>
 </div>
 
